--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,5 +4,5 @@
   <hr class="my-4">
   <p>veniam voluptatibus aliquid unde sit Libero veniam similique ex reiciendis doloribus! Deleniti sunt cum ad est atque. Esse earum
   </p>
-  <a class="btn btn-primary btn-lg" href="http://inalytics-data.com" role="button">IAnalytics</a>
+  <a class="btn btn-primary btn-lg" href="http://ianalytics-data.com" role="button">IAnalytics</a>
 </div>
