mejoras signin y signup

--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -9,7 +9,7 @@
           <input type="text" name="title" class="form-control" placeholder="Title" autofocus autocomplete="off" />
         </div>
         <div class="form-group">
-          <textarea name="description" class="form-control" placeholder="Description" autocomplete="off"></textarea>
+          <textarea name="description" class="form-control" placeholder="Description máximo 250 palabras" autocomplete="off" rows="8" cols="50" maxlength="200"></textarea>
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block" type="submit">
