--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -19,7 +19,7 @@
           <input type="text" name="title" class="form-control" value="{{note.title}}"/>
         </div>
         <div class="form-group">
-          <textarea name="description" class="form-control">{{note.description}}</textarea>
+          <textarea name="description" class="form-control" placeholder="Description máximo 250 palabras" autocomplete="off" rows="8" cols="50" maxlength="200">{{note.description}}</textarea>
         </div>
         <div class="form-group">
           <button class="btn btn-primary btn-block" type="submit">
