--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -3,7 +3,6 @@
 
   
  <!-- Start About -->
-           
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-7 mx-auto">
@@ -13,17 +12,13 @@
                                         <hr>
                                         <div class="card">
                                                 <h3>IAnalytics Corporation</h3>
-                                                
                                                 <p>
-                                                    Plataforma para conectar a las empresas, gobierno, universidad y la población.
+                                                    Plataforma para conectar a las empresas, gobierno, universidades y la población. <br>
                                                     Es una fuente de retos y desafíos nacionales e internacionales que se promueven  
                                                     para resolver aplicando la <b>INDUSTRIA 4.0</b> 
                                                     <br>
-                                                    -John Mendoza | Founder
+                                                    <b>-</b> John Mendoza | Founder
                                                 </p>
-                                                
-                                                
-                                
                                         </div>
 
                                     </div>
