--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -2,9 +2,8 @@
 	<!-- Footer -->
 <footer class="page-footer font-small blue pt-4">
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2019 Copyright Right:
-      <a href="http://ianalytics-data.com" target="_blank"> IAnalytics Corporation:</a>
-      <span>John Mendoza - Universidad Nacional de Ingeniería</span>
+    <div class="footer-copyright text-center py-3">© 2019 Copyright Right: IAnalytics Corporation
+      <span>- John Mendoza - Universidad Nacional de Ingeniería</span>
     </div>
     <!-- Copyright -->
 
