--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -11,7 +11,7 @@
                                         </div>
                                         <hr>
                                         <div class="card">
-                                                <a href="http://ianalytics-data.com" target="_blank"><h3>IAnalytics Corporation</h3></a>
+                                                <a id="linkPage" href="http://ianalytics-data.com" target="_blank"><h3>IAnalytics Corporation</h3></a>
                                                 <p>
                                                     Plataforma para conectar a las empresas, gobierno, universidades y la población. <br>
                                                     Es una fuente de retos y desafíos nacionales e internacionales que se promueven  
