--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -1,6 +1,9 @@
+<div id="agregarNotas">
+  <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
+</div>
 <div class="row">
   {{#each notes}}
-  <div class="col-md-3">
+  <div class="col-sm-12 col-md-3">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title d-flex justify-content-between align-items-center">
@@ -18,10 +21,21 @@
   {{else}}
   <div class="card mx-auto">
     <div class="card-body">
-      <h1>Hello {{user.name}}</h1>
+      <h1>Hola {{user.name}}</h1>
       <p clsss="lead">There are not Notes yet.</p>
-      <a href="/notes/add" class="btn btn-success btn-block">Create One!</a>
+      <a href="/notes/add" class="btn btn-success btn-block">Crear Uno!</a>
     </div>
   </div>
   {{/each}}
 </div>
+
+<style>
+  #agregarNotas .btn{
+    background-color: #01b7ee;
+            color: #0c0b0b;
+            padding: 10px;
+            margin-bottom: 20px;
+            font-size: 16px;
+            border-radius: 3px;
+  }
+</style>
