--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-4 mx-auto">
+<div class="col-sm-12 col-md-4">
   <div class="card text-center">
     <div class="card-header">
       <h3>New Note</h3>
