--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -33,26 +33,9 @@
             margin-bottom: 0%;
         }
 
-      #login {
-            background-color: #01b7ee;
-            color: #040505;
-            border-radius: 3px;
-            padding: 0.5rem;
-            font-size: 15px;
-        }
-
-        #login:hover {
-            background-color: #0ced67;
-        }
-
-        .card {
-            text-align: center;
-            background: #ffffff;
-            color: #040505;
-            border-radius: 5px;
-            border: solid 1px #01b7ee;
-            margin-top: 20px;
-        }
+      .logo {
+        width: 30%;
+      }
 
         #bottonForm {
             background-color: #01b7ee;
