--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,3 +4,14 @@
   <hr class="my-4">
   <a class="btn btn-primary btn-lg" href="http://ianalytics-data.com" target="_blank" role="button">John Mendoza</a>
 </div>
+
+<style>
+  a .btn{
+     background-color: #01b7ee;
+            color: #0c0b0b;
+            padding: 10px;
+            margin-bottom: 20px;
+            font-size: 16px;
+            border-radius: 3px;
+}
+</style>
