--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -6,7 +6,7 @@
 </div>
 
 <style>
-  a .btn{
+  .jumbotron .btn{
      background-color: #01b7ee;
             color: #0c0b0b;
             padding: 10px;
