--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -16,7 +16,7 @@
             <input type="password" id="pwd" class="form-control" name="password" placeholder="Password">
           </div>
           <button id="bottonForm" class="btn btn-primary btn-block">
-            Signin 
+            Ingresar 
           </button>
         </form>
       </div>
