--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,25 +1,14 @@
 
 body {
-  background: #11998e;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #040505;
 }
+
+
 
 #linkPage{
   color: #01b7ee;
 }
 
-#login {
-  background-color: #01b7ee;
-  color: #040505;
-  border-radius: 3px;
-  padding: 0.5rem;
-  font-size: 15px;
-}
-
-#login:hover {
-  background-color: #0ced67;
-}
 
 .card {
   text-align: center;
