--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,17 +1,21 @@
-<div class="jumbotron mt-4">
-  <h4 class="display-4">Notes App Nodejs And Mongodb!</h4>
-  <p class="lead">A simple App to manage Notes developed with Nodejs, Express, Mongodb and Javascript Technologies</p>
-  <hr class="my-4">
-  <a class="btn btn-primary btn-lg" href="http://ianalytics-data.com" target="_blank" role="button">John Mendoza</a>
+<div id="principal" class="jumbotron jumbotron-fluid mt-4">
+ <div class="container-fluid">
+    <h1 class="display-4">Desafío nacionales e internacionales</h1>
+    <p class="lead">Unámos esfuerzo para conectar con crear un mejor futuro.</p>
+  </div>
 </div>
 
+
+
+
 <style>
-  .jumbotron .btn{
-     background-color: #01b7ee;
-            color: #0c0b0b;
-            padding: 10px;
-            margin-bottom: 20px;
-            font-size: 16px;
-            border-radius: 3px;
+  body {
+  background: #0b0e0f; 
 }
+
+#principal{
+  background-color: #3098bb;
+  color: aliceblue;
+}
+  
 </style>
