--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -1,4 +1,5 @@
-<div id="agregarNotas">
+<div class="container">
+  <div id="agregarNotas" class="mt-2">
   <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
 </div>
 <div class="row">
@@ -27,6 +28,8 @@
     </div>
   </div>
   {{/each}}
+</div>
+
 </div>
 
 <style>
