--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -10,7 +10,7 @@
       <div class="card-body">
         <form action="/users/signin" method="POST">
           <div class="form-group">
-            <input type="email" id="email" class="form-control" name="email" placeholder="Email" autofocus autocomplete="off">
+            <input type="email" id="email" class="form-control" name="email" placeholder="Email" autofocus autocomplete="off" id="campo" onKeyUp="document.getElementById(this.id).value=document.getElementById(this.id).value.toLowerCase()">
           </div>
           <div class="form-group">
             <input type="password" id="pwd" class="form-control" name="password" placeholder="Password">
