--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -11,8 +11,7 @@
                                                 <a id="linkPage" href="http://ianalytics-data.com" target="_blank"><h3>IAnalytics Corporation</h3></a>
                                                 <p>
                                                     Plataforma para conectar a las empresas, gobierno, universidades y la población. <br>
-                                                    Es una fuente de retos y desafíos nacionales e internacionales que se promueven  
-                                                    para resolver aplicando la <b>INDUSTRIA 4.0</b> 
+                                                    
                                                     <br>
                                                     <b>-</b> John Mendoza | Founder
                                                 </p>
@@ -53,7 +52,7 @@
                                                             <input type="text" id="email" class="form-control" name="name" placeholder="Name*" value="{{name}}" autocomplete="off" autofocus>
                                                         </div>
                                                         <div class="form-group">
-                                                            <input type="email" id="email" class="form-control" name="email" placeholder="Email*" value="{{email}}" autocomplete="off">
+                                                            <input type="email"  id="email"  class="form-control" name="email" placeholder="Email*" value="{{email}}" autocomplete="off" id="campo" onKeyUp="document.getElementById(this.id).value=document.getElementById(this.id).value.toLowerCase()">
                                                         </div>
                                                         <div class="form-group">
                                                             <input type="password" id="pwd" class="form-control" name="password" placeholder="Password*" value="{{password}}">
