--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -1,22 +1,15 @@
 <div id="principal" class="jumbotron jumbotron-fluid mt-4">
- <div class="container">
-    <div class="container text-center"><h3 id="lead">Desafío nacionales e internacionales</h3></div>
-    <ul class="list-group text-center">
-  <li class="list-group-item list-group-item-primary" >Unámos esfuerzos para conectar con crear un mejor futuro.</li>
-  <li class="list-group-item list-group-item-success">Trabajemos por la <b>EQUIDAD</b> de genéro.</li>
-  <li class="list-group-item list-group-item-warning">Hagamos del MUNDO un mejor lugar.</li>
-  <li class="list-group-item list-group-item-info">Desarrollemos tecnologías que nos permitan ver más allá.</li>
-   </ul>
-   <div class="text-center">
-       <button id="buttonForm" class="btn" style="backgroud:black">Más de un $1 millón de dólares en premios</button>
-   </div>
-    </div>
+ <div class="container-fluid">
+    <div class="container"><h3 id="lead">Desafío nacionales e internacionales</h3></div>
+    <p class="lead">Unámos esfuerzo para conectar con crear un mejor futuro.</p>
+    <p class="lead">Trabajemos por la <b>EQUIDAD</b> de genéro.</p>
+    <p class="lead">Desarrollemos tecnologías que nos permitan ver más allá.</p>
+    <p class="lead">Hagamos del MUNDO un mejor lugar.</p>
+    <button id="buttonForm" class="btn text-center">Más de un $1,9323 dólares en funding</button>
+  </div>
 </div>
 
-<div>
-  <h4 id="lead"><i class="fas fa-arrow-right"></i> DESAFÍOS RECIENTES: DISPONIBLE PARA RESOLVERLOS</h4>
-</div>
-
+<h4 id="lead"><i class="fas fa-arrow-right"></i> DESAFÍOS RECIENTES: DISPONIBLE PARA RESOLVERLOS</h4>
     <div class="card-deck">
   <div id="firstCard" class="card">
     <img src="https://www.fundacionisys.org/images/IAb.png" class="card-img-top" alt="...">
@@ -79,12 +72,12 @@
   background: #000000; 
 }
 #lead{
-    color: #000000;
+    color: #76ff03;
 }
 
 #principal{
-  background-color: #e91e63;
-  color: #040505;
+  background-color: #01b7ee;
+  color: rgb(8, 8, 8);
 }
 
 #firstCard{
