--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -1,6 +1,6 @@
 <div id="principal" class="jumbotron jumbotron-fluid mt-4">
- <div class="container-fluid">
-    <div class="container"><h3 id="lead">Desafío nacionales e internacionales</h3></div>
+ <div class="container text-center">
+    <h3 id="lead">Desafío nacionales e internacionales</h3>
     <p class="lead">Unámos esfuerzo para conectar con crear un mejor futuro.</p>
     <p class="lead">Trabajemos por la <b>EQUIDAD</b> de genéro.</p>
     <p class="lead">Desarrollemos tecnologías que nos permitan ver más allá.</p>
