--- a/src/views/desafios.hbs
+++ b/src/views/desafios.hbs
@@ -1,11 +1,11 @@
 <div id="principal" class="jumbotron jumbotron-fluid mt-4">
  <div class="container text-center">
-    <h3 id="lead">Desafío nacionales e internacionales</h3>
+    <h3 id="lead1">Desafío nacionales e internacionales</h3>
     <p class="lead">Unámos esfuerzo para conectar con crear un mejor futuro.</p>
     <p class="lead">Trabajemos por la <b>EQUIDAD</b> de genéro.</p>
     <p class="lead">Desarrollemos tecnologías que nos permitan ver más allá.</p>
     <p class="lead">Hagamos del MUNDO un mejor lugar.</p>
-    <button id="buttonForm" class="btn text-center">Más de un $1,9323 dólares en funding</button>
+    <button id="buttonForm" class="btn text-center">Más de un $1 millón dólares en inversiones</button>
   </div>
 </div>
 
@@ -72,6 +72,9 @@
   background: #000000; 
 }
 #lead{
+    color: #76ff03;
+}
+#lead1{
     color: #000000;
 }
 
