--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,21 +1,549 @@
-<div id="principal" class="jumbotron jumbotron-fluid mt-4">
- <div class="container-fluid">
-    <h1 class="display-4">Desafío nacionales e internacionales</h1>
-    <p class="lead">Unámos esfuerzo para conectar con crear un mejor futuro.</p>
+  <!-- About -->
+  <section class="about" id="about">
+    <div class="container text-center">
+      <h2 style="color:#25bafc">
+          Nosotros
+        </h2>
+
+      <p>
+        Voluptua scripserit per ad, laudem viderer sit ex. Ex alia corrumpit voluptatibus usu, sed unum convenire id. Ut cum nisl moderatius, per nihil dicant commodo an. Eum tacimates erroribus ad. Atqui feugiat euripidis ea pri, sed veniam tacimates ex. Menandri
+        temporibus an duo.
+      </p>
+
+      <div class="row stats-row">
+        <div class="stats-col text-center col-md-3 col-sm-6">
+          <div class="circle">
+            <span class="stats-no" data-toggle="counter-up">2,432</span> Militantes del partido
+          </div>
+        </div>
+
+        <div class="stats-col text-center col-md-3 col-sm-6">
+          <div class="circle">
+            <span class="stats-no" data-toggle="counter-up">79</span> Centros del partido
+          </div>
+        </div>
+
+        <div class="stats-col text-center col-md-3 col-sm-6">
+          <div class="circle">
+            <span class="stats-no" data-toggle="counter-up">1,463</span> Jóvenes morados
+          </div>
+        </div>
+
+        <div class="stats-col text-center col-md-3 col-sm-6">
+          <div class="circle">
+            <span class="stats-no" data-toggle="counter-up">1315</span> Equipo descentralizado
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /About -->
+  <!-- Parallax -->
+
+  <!--
+    <div class="block bg-primary block-pd-lg block-bg-overlay text-center" data-bg-img="img/parallax-bg.jpg" data-settings='{"stellar-background-ratio": 0.6}' data-toggle="parallax-bg">
+    <h2>
+        Welcome to a perfect theme
+      </h2>
+
+    <p>
+      This is the most powerful theme with thousands of options that you have never seen before.
+    </p>
+    <img alt="Bell - A perfect theme" class="gadgets-img hidden-md-down" src="img/gadgets.png">
   </div>
-</div>
+  -->
+  <!-- /Parallax -->
+  <!-- Features -->
 
+  <section class="features" id="features">
+    <div class="container">
+      <h2 class="text-center">
+          Pilares
+        </h2>
 
+      <div class="row">
+        <div class="feature-col col-lg-4 col-xs-12">
+          <div class="card card-block text-center">
+            <div>
+              <div class="feature-icon">
+                <span class="fa fa-rocket"></span>
+              </div>
+            </div>
 
+            <div>
+              <h3>
+                  Custom Design
+                </h3>
 
-<style>
-  body {
-  background: #0b0e0f; 
-}
+              <p>
+                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+              </p>
+            </div>
+          </div>
+        </div>
 
-#principal{
-  background-color: #3098bb;
-  color: aliceblue;
-}
-  
-</style>
+        <div class="feature-col col-lg-4 col-xs-12">
+          <div class="card card-block text-center">
+            <div>
+              <div class="feature-icon">
+                <span class="fa fa-envelope"></span>
+              </div>
+            </div>
+
+            <div>
+              <h3>
+                  Responsive Layout
+                </h3>
+
+              <p>
+                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="feature-col col-lg-4 col-xs-12">
+          <div class="card card-block text-center">
+            <div>
+              <div class="feature-icon">
+                <span class="fa fa-bell"></span>
+              </div>
+            </div>
+
+            <div>
+              <h3>
+                  Innovative Ideas
+                </h3>
+
+              <p>
+                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="feature-col col-lg-4 col-xs-12">
+          <div class="card card-block text-center">
+            <div>
+              <div class="feature-icon">
+                <span class="fa fa-database"></span>
+              </div>
+            </div>
+
+            <div>
+              <h3>
+                  Good Documentation
+                </h3>
+
+              <p>
+                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="feature-col col-lg-4 col-xs-12">
+          <div class="card card-block text-center">
+            <div>
+              <div class="feature-icon">
+                <span class="fa fa-cutlery"></span>
+              </div>
+            </div>
+
+            <div>
+              <h3>
+                  Excellent Features
+                </h3>
+
+              <p>
+                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="feature-col col-lg-4 col-xs-12">
+          <div class="card card-block text-center">
+            <div>
+              <div class="feature-icon">
+                <span class="fa fa-dashboard"></span>
+              </div>
+            </div>
+
+            <div>
+              <h3>
+                  Retina Ready
+                </h3>
+
+              <p>
+                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Features -->
+  <!-- Call to Action -->
+
+  <!--
+    <section class="cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 col-sm-12 text-lg-left text-center">
+          <h2>
+              Call to Action Section
+            </h2>
+
+          <p>
+            Lorem ipsum dolor sit amet, nec ad nisl mandamus imperdiet, ut corpora cotidieque cum. Et brute iracundia his, est eu idque dictas gubergren
+          </p>
+        </div>
+
+        <div class="col-lg-3 col-sm-12 text-lg-right text-center">
+          <a class="btn btn-ghost" href="#">Buy This Theme</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  -->
+  <!-- /Call to Action -->
+  <!-- Portfolio -->
+
+  <section class="portfolio" id="portfolio">
+    <div class="container text-center">
+      <h2>
+          Eventos
+        </h2>
+
+      <p>
+        Voluptua scripserit per ad, laudem viderer sit ex. Ex alia corrumpit voluptatibus usu, sed unum convenire id. Ut cum nisl moderatius, Per nihil dicant commodo an.
+      </p>
+    </div>
+
+    <div class="portfolio-grid">
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-1.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-2.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-3.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-4.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-5.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-6.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-7.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6 col-xs-12">
+          <div class="card card-block">
+            <a href="#"><img alt="" src="img/porf-8.jpg">
+              <div class="portfolio-over">
+                <div>
+                  <h3 class="card-title">
+                    The Dude Rockin'
+                  </h3>
+
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, eu sed suas eruditi honestatis.
+                  </p>
+                </div>
+              </div></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- /Portfolio -->
+  <!-- Team -->
+
+  <section class="team" id="team">
+    <div class="container">
+      <h2 class="text-center">
+          Nuestras Sedes
+        </h2>
+
+      <div class="row text-center">
+        <div class="col-sm-3 col-xs-6">
+          <div class="card card-block">
+            <a href="#"><img alt="" class="team-img" src="img/team-1.jpg">
+              <div class="card-title-wrap">
+                <span class="card-title">San Martín de Porres</span> <span class="card-text">En Crecimiento</span>
+              </div>
+
+              <div class="team-over">
+                <h4 class="hidden-md-down">
+                  Búscanos en:
+                </h4>
+
+                <nav class="social-nav">
+                  <a href="#"><i class="fa fa-twitter"></i></a> 
+                  <a href="#"><i class="fa fa-facebook"></i></a> 
+                  <a href="#"><i class="fa fa-linkedin"></i></a> 
+                  <a href="#"><i class="fa fa-envelope"></i></a>
+            </nav>
+
+            <h5 id="leadSede">
+              Unámos esfuerzos para crear un fututo con esperanza
+            </h5>
+          </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-sm-3 col-xs-6">
+        <div class="card card-block">
+          <a href="#"><img alt="" class="team-img" src="img/team-2.jpg">
+              <div class="card-title-wrap">
+                <span class="card-title">Los Olivos</span> <span class="card-text">En crecimiento</span>
+              </div>
+
+              <div class="team-over">
+                <h4 class="hidden-md-down">
+                  Búscanos en:
+                </h4>
+
+                <nav class="social-nav">
+                  <a href="#"><i class="fa fa-twitter"></i></a> 
+                  <a href="#"><i class="fa fa-facebook"></i></a> 
+                  <a href="#"><i class="fa fa-linkedin"></i></a> 
+                  <a href="#"><i class="fa fa-envelope"></i></a>
+          </nav>
+
+          <h5 id="leadSede">
+            Unámos esfuerzos para crear un fututo con esperanza
+          </h5>
+        </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-sm-3 col-xs-6">
+      <div class="card card-block">
+        <a href="#"><img alt="" class="team-img" src="img/team-3.jpg">
+              <div class="card-title-wrap">
+                <span class="card-title">Independencia</span> <span class="card-text">Consolidado</span>
+              </div>
+
+              <div class="team-over">
+                <h4 class="hidden-md-down">
+                  Búscanos en:
+                </h4>
+
+                <nav class="social-nav">
+                  <a href="#"><i class="fa fa-twitter"></i></a> 
+                  <a href="#"><i class="fa fa-facebook"></i></a> 
+                  <a href="#"><i class="fa fa-linkedin"></i></a> 
+                  <a href="#"><i class="fa fa-envelope"></i></a>
+        </nav>
+
+        <h5 id="leadSede">
+          Unámos esfuerzos para crear un fututo con esperanza
+        </h5>
+      </div>
+      </a>
+    </div>
+    </div>
+
+    <div class="col-sm-3 col-xs-6">
+      <div class="card card-block">
+        <a href="#"><img alt="" class="team-img" src="img/team-4.jpg">
+              <div class="card-title-wrap">
+                <span class="card-title">Puente Piedra</span> <span class="card-text">En Crecimiento</span>
+              </div>
+
+              <div class="team-over">
+                <h4 class="hidden-md-down">
+                  Búscanos en:
+                </h4>
+
+                <nav class="social-nav">
+                  <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-linkedin"></i></a> <a href="#"><i class="fa fa-envelope"></i></a>
+        </nav>
+
+        <h5 id="leadSede">
+          Unámos esfuerzos para crear un fututo con esperanza
+        </h5>
+      </div>
+      </a>
+    </div>
+    </div>
+    </div>
+    </div>
+  </section>
+  <!-- /Team -->
+  <!-- @component: footer -->
+
+  <section id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h2 class="section-title">Contáctanos</h2>
+        </div>
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="col-lg-3 col-md-4">
+          <div class="info">
+            <div>
+              <i class="fa fa-map-marker"></i>
+              <p>Sede Central<br>Lima, PERÚ</p>
+            </div>
+
+            <div>
+              <i class="fa fa-envelope"></i>
+              <p>info@example.com</p>
+            </div>
+
+            <div>
+              <i class="fa fa-phone"></i>
+              <p>+51 994 370 447</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-lg-5 col-md-8">
+          <div class="form">
+            <div id="sendmessage">Your message has been sent. Thank you!</div>
+            <div id="errormessage"></div>
+            <form action="/contacts/add" method="post" role="form" class="contactForm">
+              <div class="form-group">
+                <input type="text" name="name" class="form-control" id="name" value="{{name}}" placeholder="Su nombre" data-rule="minlen:4" data-msg="Please enter at least 4 chars" autocomplete="off"/>
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <input type="email" class="form-control" name="email" id="email" value="{{email}}" placeholder="Su email" data-rule="email" data-msg="Please enter a valid email" autocomplete="off"/>
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <input type="number" class="form-control" name="phone" id="email" value="{{phone}}" placeholder="Su teléfono celular" data-rule="email" data-msg="Please enter a valid email" autocomplete="off"/>
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" name="subject" id="subject" value="{{subject}}" placeholder="Asunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" autocomplete="off" />
+                <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Mensaje"></textarea>
+                <div class="validation"></div>
+              </div>
+              <div class="text-center"><button type="submit">Enviar Mensaje</button></div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
