--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -1,3 +1,5 @@
+
+
 <div class="container">
   <div id="agregarNotas" class="mt-2">
   <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
@@ -29,8 +31,8 @@
   </div>
   {{/each}}
 </div>
-
 </div>
+{{> messages }}
 
 <style>
   #agregarNotas .btn{
