--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,10 +1,52 @@
-<!--
-  <footer class="page-footer font-small blue pt-4">
-    <div class="footer-copyright text-center py-3">© 2019 Copyright Right: IAnalytics Corporation
-      <span>- John Mendoza - Universidad Nacional de Ingeniería</span>
+<footer class="site-footer">
+    <div class="bottom">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-6 col-xs-12 text-lg-left text-center">
+            <p class="copyright-text">
+              © IAnalytics
+            </p>
+            <div class="credits">
+              <!--
+                All the links in the footer should remain intact.
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bell
+              -->
+             Designed by: <a href="http://ianalytics-data.com" target="_blank">John Mendoza</a>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-xs-12 text-lg-right text-center">
+            <ul class="list-inline">
+                
+
+             {{#if user}}
+              <li class="list-inline-item">
+                <a href="/">Principal</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/users/signup">Registrar</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/users/logout">Salir</a>
+              </li>
+              {{else}}
+              <li class="list-inline-item">
+                <a href="/users/signin">Entrar</a>
+                 </li>
+                <li class="list-inline-item">
+                <a href="/">Principal</a>
+              </li>
+              {{/if}}
+
+              
+            </ul>
+          </div>
+
+        </div>
+      </div>
     </div>
-</footer>
--->
-
-
-  
+  </footer>
+  <a class="scrolltop" href="#"><span class="fa fa-angle-up"></span></a>
