--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,44 +1,98 @@
+<!-- Page Content ================================================== -->
+  <!-- Hero -->
 
-  <nav class="navbar navbar-expand-lg ">
-   <a class="navbar-brand" href="#">IAnalytics</a>
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-   </button>
+  <section class="hero">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-md-12">
+          <a class="hero-brand" href="#" title="Home"><img alt="challengex" src="/img/logo.png"></a>
+        </div>
+      </div>
+        <div class="col-md-12">
+        <h1 id="principalText">
+            DESAFÍOS NACIONALES Y GLOBALES 
+        </h1>
+        <!--
+          <p class="tagline">
+          This is a powerful theme with some great features that you can use in your future projects.
+        </p>
+        -->
+        <a class="btn btn-full" href="#about">Empezemos</a>
+      </div>
+    </div>
+      
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/desafios">Desafíos</a>
-      </li>
-      {{#if user}}
-      <div class="nav-item">
-        <a href="/notes" class="nav-link">Notas</a>
+  </section>
+  <!-- /Hero -->
+
+  <!-- Header -->
+  <header id="header">
+    <div class="container">
+
+      <div id="logo" class="pull-left">
+        <a href="/"><img src="img/logoWeb.png" alt="" title="" /></img></a>
+        <!-- Uncomment below if you prefer to use a text image -->
+        <!--<h1><a href="#hero">Bell</a></h1>-->
       </div>
-      <div class="nav-item">
-        <a href="/users/logout" class="nav-link">Salir</a>
-      </div>
-      <form class="form-inline my-2 my-lg-0">
-           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-           <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      {{else}}
-          <li class="nav-item">
-            <a class="nav-link" href="/users/signin">Login</a>
+
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          {{#if user}}
+              <li class="list-inline-item">
+                <a href="/">Principal</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/notes">Contactos</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="/users/signup">Registrar</a>
+              </li>
+          {{else}}
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#features">Pilares</a></li>
+          <li><a href="#portfolio">Eventos</a></li>
+          <li><a href="#team">Sedes</a></li>
+          <li><a href="#contact">Contáctanos</a></li>
+          {{/if}}
+          <!--
+            <li class="menu-has-children"><a href="">Drop Down</a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li class="menu-has-children"><a href="#">Drop Down 2</a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">Drop Down 5</a></li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/users/signup">Register</a>
-          </li>
+          -->
+        </ul>
+      </nav>
+      <!-- #nav-menu-container -->
+
+      <nav class="nav social-nav pull-right d-none d-lg-inline">
+        {{#if user}}
+        <a href="https://twitter.com/partidomorado" target="_blank"><i class="fa fa-twitter"></i></a> 
+        <a href="https://www.facebook.com/partidomorado/" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="/users/logout">Salir</a> 
+        {{else}}
+        <a href="https://twitter.com/partidomorado" target="_blank"><i class="fa fa-twitter"></i></a> 
+        <a href="https://www.facebook.com/partidomorado/" target="_blank"><i class="fa fa-facebook"></i></a>
+        <a href="/users/signin">Entrar</a> 
         {{/if}}
-    </ul>
-    
-  </div>
-</nav>
-
-<style>
-  .navbar{
-    background: black;
-  }
-</style>
+        
+        <!--
+          <a href="https://www.linkedin.com/in/julioguzmancaceres/" target="_blank"><i class="fa fa-linkedin"></i></a> 
+          <a href="#"><i class="fa fa-envelope"></i></a>
+          -->
+      </nav>
+    </div>
+  </header>
+  <!-- #header -->
