--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,12 +1,12 @@
-<div class="row">
+<div class="row" id="about">
   <div class="col-md-4 mx-auto">
     <div class="card mt-4 text-center">
       <div class="card-header" id="tituloCard">
-        <h1 class="h4">
-          Ingresar cuenta
+        <h1 id="label" class="h4">
+          Ingresar a cuenta
         </h1>
       </div>
-        <img class="rounded-circle mx-auto d-block logo m-4" src="/img/logo.jpg" alt="Logo">
+        <img class="mx-auto d-block logo m-4" src="/img/logo.png" alt="Logo">
       <div class="card-body">
         <form action="/users/signin" method="POST">
           <div class="form-group">
@@ -18,16 +18,18 @@
           <button id="bottonForm" class="btn btn-primary btn-block">
             Ingresar 
           </button>
+          <span>Si aún no tienes cuenta <a href="/users/signup" class="btn"> REGISTRATE</a></span>
         </form>
       </div>
     </div>
+    
   </div>
 </div>
-
+{{> messages }}
 <style>
    #tituloCard {
-            border: 1px solid #01b7ee;
-            background: #01b7ee;
+            border: 1px solid #25bafc;
+            background: #25bafc;
             color: #040505;
             font-size: 23px;
             margin-bottom: 0%;
@@ -38,7 +40,7 @@
       }
 
         #bottonForm {
-            background-color: #01b7ee;
+            background-color: #25bafc;
             color: #ffffff;
             padding: 10px;
             margin-bottom: 20px;
@@ -47,15 +49,18 @@
         }
 
          #email {
-            padding: 22px;
-            border: solid 1px #01b7ee;
+            padding: 15px;
+            border: solid 1px #25bafc;
             border-radius: 3px;
         }
 
         #pwd {
-            padding: 22px;
-            border: solid 1px #01b7ee;
+            padding: 15px;
+            border: solid 1px #25bafc;
             margin-bottom: 20px;
             border-radius: 3px;
+        }
+        #label{
+          color: #ffffff;
         }
 </style>
