--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -32,7 +32,10 @@
   {{/each}}
 </div>
 </div>
-{{> messages }}
+<div class="container">
+      {{> errors }}
+      {{> messages }}
+  </div>
 
 <style>
   #agregarNotas .btn{
