--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -57,7 +57,11 @@
                                     <div class="col-md-4"></div>
                                     </div>
                                 </div>
-                                {{> messages }}
+                                <div class="container">
+      {{> errors }}
+      {{> messages }}
+  </div>
+
       
         <!-- End About -->
 
