--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -25,7 +25,11 @@
     
   </div>
 </div>
-{{> messages }}
+<div class="container">
+      {{> errors }}
+      {{> messages }}
+  </div>
+
 <style>
    #tituloCard {
             border: 1px solid #25bafc;
