--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,36 +2,37 @@
   <section class="about" id="about">
     <div class="container text-center">
       <h2 style="color:#25bafc">
-          Nosotros
+          ChallengeX
         </h2>
 
       <p>
-        Voluptua scripserit per ad, laudem viderer sit ex. Ex alia corrumpit voluptatibus usu, sed unum convenire id. Ut cum nisl moderatius, per nihil dicant commodo an. Eum tacimates erroribus ad. Atqui feugiat euripidis ea pri, sed veniam tacimates ex. Menandri
-        temporibus an duo.
+        <b>ChallengeX:</b> es la red más grande de <b>ACADÉMICOS</b>, miembros de los <b>GOBIERNOS</b>, 
+        líderes de <b>EMPRESAS</b> y <b>COMUNIDADES</b> que buscan dar solución 
+        a las problemáticas más desafiantes y apremiantes del <b>MUNDO.</b> 
       </p>
 
       <div class="row stats-row">
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">2,432</span> Militantes del partido
+            <span class="stats-no" data-toggle="counter-up">2,432</span> DESAFÍOS
           </div>
         </div>
 
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">79</span> Centros del partido
+            <span class="stats-no" data-toggle="counter-up">64,223</span> ACADÉMICOS Y GOBIERNO
           </div>
         </div>
 
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">1,463</span> Jóvenes morados
+            <span class="stats-no" data-toggle="counter-up">463</span> LÍDERES DE EMPRESAS
           </div>
         </div>
 
         <div class="stats-col text-center col-md-3 col-sm-6">
           <div class="circle">
-            <span class="stats-no" data-toggle="counter-up">1315</span> Equipo descentralizado
+            <span class="stats-no" data-toggle="counter-up">643</span> LÍDERES DE COMUNIDADES
           </div>
         </div>
       </div>
@@ -72,11 +73,11 @@
 
             <div>
               <h3>
-                  Custom Design
+                  SINERGIA
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                Entendemos que el resultado es más que la suma de las partes.
               </p>
             </div>
           </div>
@@ -92,11 +93,11 @@
 
             <div>
               <h3>
-                  Responsive Layout
+                  NETWORKING
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                Promovemos en la comunidad la formación de equipos multidisciplinarios.
               </p>
             </div>
           </div>
@@ -112,11 +113,11 @@
 
             <div>
               <h3>
-                  Innovative Ideas
+                  INNOVACIÓN
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                Creemos que las soluciones a los grandes desafíos se llegará mediante la creatividad.
               </p>
             </div>
           </div>
@@ -134,11 +135,11 @@
 
             <div>
               <h3>
-                  Good Documentation
+                  NUEVAS TECNOLOGÍAS
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                Buscamos soluciones basadas en nuevas tecnologías con propuestas concretas.
               </p>
             </div>
           </div>
@@ -154,11 +155,11 @@
 
             <div>
               <h3>
-                  Excellent Features
+                  INTEGRIDAD
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                Realizamos evaluaciones integrales para dar con los mejores equipos y propuestas.
               </p>
             </div>
           </div>
@@ -174,11 +175,11 @@
 
             <div>
               <h3>
-                  Retina Ready
+                  ACCIÓN
                 </h3>
 
               <p>
-                Eque feugiat contentiones ei has. Id summo mundi explicari his, nec in maiorum scriptorem.
+                Sabemos que la mejor forma de hacer que las cosas sucedan es pasar a la acción.
               </p>
             </div>
           </div>
@@ -220,7 +221,7 @@
         </h2>
 
       <p>
-        Voluptua scripserit per ad, laudem viderer sit ex. Ex alia corrumpit voluptatibus usu, sed unum convenire id. Ut cum nisl moderatius, Per nihil dicant commodo an.
+        Nuestros eventos más esperados del año se detallan en la siguiente lista. <b>ChallengeX_EVENTS</b>
       </p>
     </div>
 
@@ -372,15 +373,15 @@
   <section class="team" id="team">
     <div class="container">
       <h2 class="text-center">
-          Nuestras Sedes
+          Países
         </h2>
 
       <div class="row text-center">
         <div class="col-sm-3 col-xs-6">
           <div class="card card-block">
-            <a href="#"><img alt="" class="team-img" src="img/team-1.jpg">
+            <a href="#"><img alt="" class="team-img" src="img/team-1.png">
               <div class="card-title-wrap">
-                <span class="card-title">San Martín de Porres</span> <span class="card-text">En Crecimiento</span>
+                <span class="card-title">COLOMBIA</span> <span class="card-text">En Crecimiento</span>
               </div>
 
               <div class="team-over">
@@ -396,7 +397,7 @@
             </nav>
 
             <h5 id="leadSede">
-              Unámos esfuerzos para crear un fututo con esperanza
+              Hacer de un mejor COLOMBIA está en tus manos. Desafíate!
             </h5>
           </div>
           </a>
@@ -405,9 +406,9 @@
 
       <div class="col-sm-3 col-xs-6">
         <div class="card card-block">
-          <a href="#"><img alt="" class="team-img" src="img/team-2.jpg">
+          <a href="#"><img alt="" class="team-img" src="img/team-2.png">
               <div class="card-title-wrap">
-                <span class="card-title">Los Olivos</span> <span class="card-text">En crecimiento</span>
+                <span class="card-title">BRASIL</span> <span class="card-text">En crecimiento</span>
               </div>
 
               <div class="team-over">
@@ -423,7 +424,7 @@
           </nav>
 
           <h5 id="leadSede">
-            Unámos esfuerzos para crear un fututo con esperanza
+            Hacer de un mejor BRASIL está en tus manos. Desafíate!
           </h5>
         </div>
         </a>
@@ -432,9 +433,9 @@
 
     <div class="col-sm-3 col-xs-6">
       <div class="card card-block">
-        <a href="#"><img alt="" class="team-img" src="img/team-3.jpg">
+        <a href="#"><img alt="" class="team-img" src="img/team-3.png">
               <div class="card-title-wrap">
-                <span class="card-title">Independencia</span> <span class="card-text">Consolidado</span>
+                <span class="card-title">CHILE</span> <span class="card-text">En Crecimiento</span>
               </div>
 
               <div class="team-over">
@@ -447,10 +448,10 @@
                   <a href="#"><i class="fa fa-facebook"></i></a> 
                   <a href="#"><i class="fa fa-linkedin"></i></a> 
                   <a href="#"><i class="fa fa-envelope"></i></a>
-        </nav>
+              </nav>
 
         <h5 id="leadSede">
-          Unámos esfuerzos para crear un fututo con esperanza
+          Hacer de un mejor CHILE está en tus manos. Desafíate!
         </h5>
       </div>
       </a>
@@ -459,9 +460,9 @@
 
     <div class="col-sm-3 col-xs-6">
       <div class="card card-block">
-        <a href="#"><img alt="" class="team-img" src="img/team-4.jpg">
+        <a href="#"><img alt="" class="team-img" src="img/team-4.png">
               <div class="card-title-wrap">
-                <span class="card-title">Puente Piedra</span> <span class="card-text">En Crecimiento</span>
+                <span class="card-title">ARGENTINA</span> <span class="card-text">En Crecimiento</span>
               </div>
 
               <div class="team-over">
@@ -474,7 +475,7 @@
         </nav>
 
         <h5 id="leadSede">
-          Unámos esfuerzos para crear un fututo con esperanza
+          Hacer de un mejor ARGENTINA está en tus manos. Desafíate!
         </h5>
       </div>
       </a>
@@ -504,12 +505,12 @@
 
             <div>
               <i class="fa fa-envelope"></i>
-              <p>info@example.com</p>
+              <p>jomendozag@uni.pe</p>
             </div>
 
             <div>
               <i class="fa fa-phone"></i>
-              <p>+51 994 370 447</p>
+              <p>+51 997 153 705</p>
             </div>
 
           </div>
@@ -547,3 +548,4 @@
       </div>
     </div>
   </section>
+
