--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -48,10 +48,10 @@
                 <a href="/users/signup">Registrar</a>
               </li>
           {{else}}
-          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#about">ChallengeX</a></li>
           <li><a href="#features">Pilares</a></li>
           <li><a href="#portfolio">Eventos</a></li>
-          <li><a href="#team">Sedes</a></li>
+          <li><a href="#team">Países</a></li>
           <li><a href="#contact">Contáctanos</a></li>
           {{/if}}
           <!--
