--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -5,6 +5,10 @@
   <a href="/notes/add" class="btn btn-dark">Agregar nota</a>
 </div>
 <div class="row">
+  <div class="container">
+      {{> errors }}
+      {{> messages }}
+  </div>
   {{#each notes}}
   <div class="col-sm-12 col-md-3">
     <div class="card">
@@ -25,17 +29,14 @@
   <div class="card mx-auto">
     <div class="card-body">
       <h1>Hola {{user.name}}</h1>
-      <p clsss="lead">Todavía no tienes notas.</p>
+      <p class="lead">Todavía no tienes notas.</p>
       <a href="/notes/add" class="btn btn-success btn-block">Crear Uno!</a>
     </div>
   </div>
   {{/each}}
 </div>
 </div>
-<div class="container">
-      {{> errors }}
-      {{> messages }}
-  </div>
+
 
 <style>
   #agregarNotas .btn{
