--- a/src/views/partials/navigation_new.hbs
+++ b/src/views/partials/navigation_new.hbs
@@ -24,7 +24,7 @@
                 <a href="/users/signup">Registrar</a>
               </li>
           {{else}}
-          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#about">ChallengeX</a></li>
           <li><a href="#features">Pilares</a></li>
           <li><a href="#portfolio">Eventos</a></li>
           <li><a href="#team">Sedes</a></li>
